# korea-weather-mcp

./: .gitignore  README.md  cursor-mcp.example.json  env.example  pyproject.toml  requirements.txt
src/weather_mcp/: __init__.py  grid.py  kma_client.py  server.py
src/weather_mcp/apps/: __init__.py  agent_loop.py  http.py  stdio.py
